--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ cmake_minimum_required(VERSION 3.16)
 project(cmake_cross)
 
 set(CMAKE_CXX_STANDARD 14)
-
+SET(CMAKE_MODULE_PATH cmake)
 # 利用pkg-config寻找包
 # pkg-config --cflags gtk+-3.0
 # pkg-config --libs gtk+-3.0
@@ -16,14 +16,25 @@ include_directories(${GTK3_INCLUDE_DIRS})
 link_directories(${GTK3_LIBRARY_DIRS})
 add_definitions(${GTK3_CFLAGS_OTHER})
 
+
+find_package(libcef REQUIRED)
+
+
 add_subdirectory(xpanda_demo)
+
+add_subdirectory(xpanda_cef)
 
 add_executable(cmake_cross main.cpp)
 
 add_executable(cmake_cross_gtk main_gtk.cpp)
 
+add_executable(cmake_cross_cef main_cef.cpp)
+
+MESSAGE(STATUS ${LIBDB_CXX_LIBRARIES})
+
 target_link_libraries(cmake_cross xpanda_demo)
 target_link_libraries (cmake_cross_gtk ${GTK3_LIBRARIES})
+target_link_libraries (cmake_cross_cef ${GTK3_LIBRARIES} xpanda_cef)
 IF(WIN32)
     MESSAGE(STATUS “This is Windows.”)
 ELSEIF(UNIX)
